World refresh bug #41843

Closed
opened 2014-09-15 22:14:31 +02:00 by Alexey · 6 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
world_refresh.png
world_refresh2.png
world_refresh3.png
world_refresh4.png

Exact steps for others to reproduce the error
open this world_refresh.blend
and try to change world - we will see in preview don't refresh(update)

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![world_refresh.png](https://archive.blender.org/developer/F110601/world_refresh.png) ![world_refresh2.png](https://archive.blender.org/developer/F110603/world_refresh2.png) ![world_refresh3.png](https://archive.blender.org/developer/F110605/world_refresh3.png) ![world_refresh4.png](https://archive.blender.org/developer/F110607/world_refresh4.png) **Exact steps for others to reproduce the error** open this [world_refresh.blend](https://archive.blender.org/developer/F110610/world_refresh.blend) and try to change world - we will see in preview don't refresh(update)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-15 22:14:31 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Alexey was unassigned by Thomas Dinges 2014-09-16 04:35:26 +02:00
Bastien Montagne self-assigned this 2014-09-16 09:22:10 +02:00

This issue was referenced by 045b26dbf5

This issue was referenced by 045b26dbf5ab239eb893884164f4eda3e0f23038

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 045b26dbf5.

Closed by commit 045b26dbf5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41843
No description provided.