Fix T41843: World preview not updating when changing world.

NC_SCENE | ND_WORLD was not handled by buttons space...